K8/Ingress/Ingress-sorter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-genre-sorter
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spotify-genre-sorter
            port:
              number: 80
